@@ -1,3 +1,7 @@
+2008-04-18 Sarka Todorova <sarka.todorova@cern.ch>
+	* fix MSTB (Rpc shared bounds)
+	* tagged as MuonTrackingGeometry-00-03-01
+
 2008-04-16 Andreas.Salzburger@cern.ch < Andreas.Salzburger@cern.ch >
 	* change of the way how SharedObject is handled
 	* tagged as MuonTrackingGeometry-00-03-00
